# examples

./: .gitignore  .gitmodules  CMakeLists.example.template.cmake  CMakeLists.template.cmake  CMakeLists.txt  TestHelper.cmake  create_cmakelists.py  manage_examples.py
42TestingPoints/SinglePhysics/NonlinearProblems/StaticProblems/NavierStokes/3D/HEX/QuadraticVelocityLinearPressure/LEVEL_3/100k/: CMakeLists.txt
ClassicalField/Laplace/Embedded2DLaplace/: CMakeLists.txt
FiniteElasticity/TriCubicAxialExtension/: CMakeLists.txt
FluidMechanics/Stokes/RoutineCheck/ALE/: CMakeLists.txt
